docs (#17): Make default list of options longer in SB Requested per a bug found in politico repos: we need to fix 'maintainScrollVisibility' helper (if a user navigates in the multiselect with keyboard, right now, it won't auto-scroll the result list) First step to fixing that is making sure we have enough results in the default SB view to see scrolling

--- a/.storybook/storiesDisplay.scss
+++ b/.storybook/storiesDisplay.scss
@@ -1,3 +1,3 @@
 .wrapper {
-    min-height: 225px;
+    min-height: 375px;
 }
